# Multicore-TSNE

./: .gitignore
benchmark/: CMakeLists.txt  README.md  benchmark.cpp  run_profiling.sh  scatter.py  tsne_lib.h
multicore_tsne/: CMakeLists.txt  TBBGet.cmake  splittree.cpp  splittree.h  tsne.cpp  tsne.h  vptree.h
