PROJECT(tsne_multicore CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_MODULE_PATH}")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++14")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lm")

IF(MSVC)
    SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /fp:fast /O2")
ELSE()
    SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -fPIC -ffast-math -funroll-loops")
ENDIF()

FILE(GLOB src *.cpp)

IF (DEFINED TBB_ROOT_DIR)
	find_package(TBB REQUIRED)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_TBB")
ENDIF()

ADD_LIBRARY(tsne_multicore SHARED ${src})

IF (DEFINED TBB_ROOT_DIR)
	target_include_directories(tsne_multicore PRIVATE ${TBB_INCLUDE_DIRS})
	target_compile_definitions(tsne_multicore PRIVATE ${TBB_DEFINITIONS})
	target_link_libraries(tsne_multicore ${TBB_LIBRARIES})
ENDIF()
